feat: add i18n package

--- a/packages/i18n/tsconfig.json
+++ b/packages/i18n/tsconfig.json
@@ -2,14 +2,9 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "commonjs",
-    "resolveJsonModule": true,
-    "lib": [
-      "esnext"
-    ]
   },
   "include": [
-    "aeria-sdk.d.ts",
+    "@types/*.d.ts",
     "src"
   ]
 }
