chore: lint scripts

--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -7,9 +7,10 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src",
     "build": "tsc",
     "watch": "tsc --watch",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "pnpm lint && pnpm build"
   },
   "keywords": [],
   "author": "",
